--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "spatie/laravel-backup": "^7.8",
         "spatie/laravel-medialibrary": "^9.12",
         "spatie/laravel-permission": "^6.9"
     },
