--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ DB_DATABASE=administracionagua
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_DUMP_BINARY_PATH=D:\xampp\mysql\bin
+RESPALDO_BD_PATH=C:\Users\carme\OneDrive\Escritorio\respaldoBD
+
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
@@ -28,13 +32,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
+MAIL_MAILER=log
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=carmenlopezsanjuan@gmail.com
+MAIL_FROM_NAME="Your Application"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
